src/main/java/com/example/soulware_week1/global/error/exception/NotFoundGroupException.java
package com.example.soulware_week1.global.error.exception;

public abstract class NotFoundGroupException extends RuntimeException {
    public NotFoundGroupException(String message) {
        super(message);
    }
}
